admission/ValidatingAdmissionPolicy/policies/run-as-user/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-as-user-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "98905548-0495-45ef-9457-70a624f240eb"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test run-as-user-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/run-as-user/ephemeralcontainers/deny-kubectl-debug-custom.yaml
